[gd_scene load_steps=30 format=3 uid="uid://olswgjny0p2n"]

[ext_resource type="Texture2D" uid="uid://dhdn6wmpjal2u" path="res://assets/tilemap.png" id="1_061bb"]
[ext_resource type="Script" path="res://scripts/player.gd" id="1_qjafy"]
[ext_resource type="FontFile" uid="uid://jvks7ddw8xlo" path="res://assets/fonts/kongtext.ttf" id="3_qgvc2"]
[ext_resource type="AudioStream" uid="uid://b10hel38tb6gw" path="res://assets/audio/weapon_shoot.ogg" id="4_xtd1c"]
[ext_resource type="AudioStream" uid="uid://bqbu44r3t8u1d" path="res://assets/audio/get_ammo.ogg" id="5_515us"]
[ext_resource type="AudioStream" uid="uid://drjbdvhjfbxtc" path="res://assets/audio/get_weapon.ogg" id="5_keyum"]
[ext_resource type="AudioStream" uid="uid://csqn4n5oeise2" path="res://assets/audio/footstep_grass/footstep_grass_0.ogg" id="7_447ax"]
[ext_resource type="AudioStream" uid="uid://iki74rfjs4ky" path="res://assets/audio/footstep_grass/footstep_grass_1.ogg" id="8_tonyw"]
[ext_resource type="AudioStream" uid="uid://c86n1iby8ivwg" path="res://assets/audio/footstep_grass/footstep_grass_2.ogg" id="9_vrpce"]
[ext_resource type="AudioStream" uid="uid://bemn4mljibnkc" path="res://assets/audio/footstep_grass/footstep_grass_3.ogg" id="10_bdw6a"]
[ext_resource type="AudioStream" uid="uid://2em5qicnhw14" path="res://assets/audio/footstep_grass/footstep_grass_4.ogg" id="11_jv3qh"]
[ext_resource type="AudioStream" uid="uid://cpp3h6o2y2uvl" path="res://assets/audio/drop_weapon.ogg" id="12_om4o7"]
[ext_resource type="AudioStream" uid="uid://drgqvg2a2ay8x" path="res://assets/audio/jump.mp3" id="13_e15o1"]

[sub_resource type="Shader" id="Shader_u8nbg"]
code = "shader_type canvas_item;

uniform vec4 color : source_color = vec4(1.0);
uniform float width : hint_range(0, 10) = 1.0;
uniform int pattern : hint_range(0, 2) = 0; // diamond, circle, square
uniform bool inside = false;
uniform bool add_margins = true; // only useful when inside is false
uniform vec2 number_of_images = vec2(1.0); // number of horizontal and vertical images in the sprite sheet

varying flat vec4 modulate;

void vertex() {
	modulate = COLOR;
	
	if (add_margins) {
		if ((UV.x <= 0.0 || UV.x >= 1.0) && (UV.y <= 0.0 || UV.y >= 1.0)) {
			VERTEX += (UV * 2.0 - 1.0) * width;
		} else {
			VERTEX += sign(VERTEX) * width; // replace sign(VERTEX) by (sign(VERTEX) * 2.0 - 1.0) if your AnimatedSprite2D isn't Centered
		}
	}
}

bool hasContraryNeighbour(vec2 uv, vec2 texture_pixel_size, vec2 image_top_left, vec2 image_bottom_right, sampler2D texture) {
	for (float i = -ceil(width); i <= ceil(width); i++) {
		float x = abs(i) > width ? width * sign(i) : i;
		float offset;
		
		if (pattern == 0) {
			offset = width - abs(x);
		} else if (pattern == 1) {
			offset = floor(sqrt(pow(width + 0.5, 2) - x * x));
		} else if (pattern == 2) {
			offset = width;
		}
		
		for (float j = -ceil(offset); j <= ceil(offset); j++) {
			float y = abs(j) > offset ? offset * sign(j) : j;
			vec2 xy = uv + texture_pixel_size * vec2(x, y);
			
			if ((xy != clamp(xy, image_top_left, image_bottom_right) || texture(texture, xy).a <= 0.0) == inside) {
				return true;
			}
		}
	}
	
	return false;
}

void fragment() {
	vec2 uv = UV;
	vec2 image_top_left = floor(uv * number_of_images) / number_of_images;
	vec2 image_bottom_right = image_top_left + vec2(1.0) / number_of_images;
	
	if (add_margins) {
		vec2 texture_pixel_size = vec2(1.0) / (vec2(1.0) / TEXTURE_PIXEL_SIZE + vec2(width * 2.0) * number_of_images);
		
		uv = (uv - texture_pixel_size * width - image_top_left) * TEXTURE_PIXEL_SIZE / texture_pixel_size + image_top_left;
		
		if (uv != clamp(uv, image_top_left, image_bottom_right)) {
			COLOR.a = 0.0;
		} else {
			COLOR = texture(TEXTURE, uv) * modulate;
		}
	} else {
		COLOR = texture(TEXTURE, uv) * modulate;
	}
	
	if ((COLOR.a > 0.0) == inside && hasContraryNeighbour(uv, TEXTURE_PIXEL_SIZE, image_top_left, image_bottom_right, TEXTURE)) {
		COLOR.rgb = inside ? mix(COLOR.rgb, color.rgb * modulate.rgb, color.a * modulate.a) : color.rgb * modulate.rgb;
		COLOR.a += (1.0 - COLOR.a) * color.a * modulate.a;
	}
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nn2xe"]
shader = SubResource("Shader_u8nbg")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/width = 1.0
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true
shader_parameter/number_of_images = Vector2(1, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_dueus"]
radius = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lutm1"]
bg_color = Color(0, 0, 0, 0.294118)
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing_size = 0.1

[sub_resource type="Theme" id="Theme_0y08o"]
Label/font_sizes/font_size = 8
Label/styles/normal = SubResource("StyleBoxFlat_lutm1")

[sub_resource type="LabelSettings" id="LabelSettings_3a40e"]
font = ExtResource("3_qgvc2")
font_size = 8

[sub_resource type="Animation" id="Animation_v8aln"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [45]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer:speed_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/ShootFlash:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(15, 1)]
}

[sub_resource type="Animation" id="Animation_0f1va"]
resource_name = "idle"
length = 0.25
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [45]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer:speed_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/ShootFlash:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_n1u31"]
resource_name = "idle_gun"
length = 0.5
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [40, 40]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer:speed_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.7]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"checkFlashVisibility"
}, {
"args": [false],
"method": &"checkFlashVisibility"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D/ShootFlash:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3.0]
}

[sub_resource type="Animation" id="Animation_vh6kt"]
resource_name = "jump"
length = 0.5
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [46, 46]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer:speed_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/ShootFlash:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_rbij0"]
resource_name = "jump_gun"
length = 0.5
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [41, 41]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer:speed_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.7]
}

[sub_resource type="Animation" id="Animation_y8m86"]
resource_name = "shooting"
length = 0.5
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [42, 40]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer:speed_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.7]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"checkFlashVisibility"
}, {
"args": [false],
"method": &"checkFlashVisibility"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D/ShootFlash:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3.0]
}

[sub_resource type="Animation" id="Animation_ctegq"]
resource_name = "walk"
length = 0.5
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [46, 45]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer:speed_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/ShootFlash:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_s5n4n"]
resource_name = "walk_gun"
length = 0.5
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [41, 40]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer:speed_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.7]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"checkFlashVisibility"
}, {
"args": [false],
"method": &"checkFlashVisibility"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D/ShootFlash:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1.0, 3.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_adp6o"]
_data = {
"RESET": SubResource("Animation_v8aln"),
"idle": SubResource("Animation_0f1va"),
"idle_gun": SubResource("Animation_n1u31"),
"jump": SubResource("Animation_vh6kt"),
"jump_gun": SubResource("Animation_rbij0"),
"shooting": SubResource("Animation_y8m86"),
"walk": SubResource("Animation_ctegq"),
"walk_gun": SubResource("Animation_s5n4n")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_lilhm"]
streams_count = 5
stream_0/stream = ExtResource("7_447ax")
stream_0/weight = 1.0
stream_1/stream = ExtResource("8_tonyw")
stream_1/weight = 1.0
stream_2/stream = ExtResource("9_vrpce")
stream_2/weight = 1.0
stream_3/stream = ExtResource("10_bdw6a")
stream_3/weight = 1.0
stream_4/stream = ExtResource("11_jv3qh")
stream_4/weight = 1.0

[node name="Player" type="CharacterBody2D"]
z_index = 1
material = SubResource("ShaderMaterial_nn2xe")
collision_mask = 35
safe_margin = 0.3
script = ExtResource("1_qjafy")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -4)
texture = ExtResource("1_061bb")
hframes = 10
vframes = 6
frame = 45
region_rect = Rect2(0, 80, 16, 16)

[node name="ShootFlash" type="Sprite2D" parent="Sprite2D"]
visible = false
position = Vector2(15, 1)
texture = ExtResource("1_061bb")
region_enabled = true
region_rect = Rect2(48, 64, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_dueus")
metadata/_edit_lock_ = true

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="LeftShootPosition" type="Marker2D" parent="."]
visible = false
position = Vector2(-8, -1)
metadata/_edit_lock_ = true

[node name="RightShootPosition" type="Marker2D" parent="."]
visible = false
position = Vector2(8, -1)
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -35.0
offset_top = -21.0
offset_right = 37.0
offset_bottom = -12.0
theme = SubResource("Theme_0y08o")
text = "Take Ammo"
label_settings = SubResource("LabelSettings_3a40e")
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_adp6o")
}
autoplay = "idle"
speed_scale = 1.7

[node name="Audio" type="Node2D" parent="."]
visible = false
metadata/_edit_lock_ = true

[node name="ShootSound" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("4_xtd1c")

[node name="GetWeaponSound" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("5_keyum")

[node name="GetAmmoSound" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("5_515us")

[node name="FootstepSound" type="AudioStreamPlayer" parent="Audio"]
stream = SubResource("AudioStreamRandomizer_lilhm")
volume_db = -20.0
pitch_scale = 3.23

[node name="DropWeaponSound" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("12_om4o7")
volume_db = -10.0
pitch_scale = 2.0

[node name="JumpSound" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("13_e15o1")
volume_db = -5.0

[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
